# finalproject_gulina_m25_555

./: .env  .gitignore  Makefile  README.md  pyproject.toml
data/: exchange_rates.json  portfolios.json  rates.json  users.json
demos/: main-demo.cast  update-rates-demo.cast
valutatrade_hub/: __init__.py  decorators.py  logging_config.py
valutatrade_hub/core/: usecases.py
