[project]
name = "finalproject-gulina-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Gulina Dina",email = "dina.sdrv@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "prompt>=0.4.1,<0.5.0",
    "prettytable>=3.16.0,<4.0.0",
    "requests>=2.32.0,<3.0.0",
    "python-dotenv>=1.2.1,<2.0.0"
]

[tool.poetry]
packages = [
    { include = "valutatrade_hub"}
]

[tool.poetry.scripts]
project = "valutatrade_hub.cli.interface:main"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.13.1,<0.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__", "data"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []